--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nomathon Backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,12 @@
   },
   "homepage": "https://github.com/bochipachibuchi/playerOne_B#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mongodb": "^3.5.2",
-    "mongoose": "^5.8.11"
+    "mongoose": "^5.8.11",
+    "morgan": "^1.9.1"
   }
 }
