--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.9.1"
   }
 }
