--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/bochipachibuchi/playerOne_B#readme",
   "dependencies": {
+    "async": "^3.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
