--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.4",
+    "core-js": "^3.6.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
@@ -39,7 +40,8 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "mongoose-findorcreate": "^3.0.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
